--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   loading="lazy"
                 />
                 <div class="user-info-line">
-                  <div class="green-light-text">Руденко Илья</div>
+                  <div class="green-light-text">Руденко Антон нахуй</div>
                   <div class="green-text">UX/UI дизайнер</div>
                 </div></a
               >
